--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ and Blueprint http://www.blueprintcss.org/
 /*-------------------------------------------------------------- 
 MASTER: This is my master Underscores CSS stylesheet. 
 Copy the entire contents below into a new Underscores-based theme 
-before I start the customizing.
+before I start customizing.
 --------------------------------------------------------------*/
 
 /*--------------------------------------------------------------
